# Tec

./: .gitignore  DESIGN.md  MDX-SPEC.md  README.md  build.bat  build.sh  dev.bat  index.html  package-lock.json  package.json  playwright.config.ts
e2e/: TEST_PLAN.md  basic.spec.ts  file-ops.spec.ts  large-file.spec.ts  performance.spec.ts
public/fonts/: bootstrap-icons.css  fontawesome.css
scripts/: generate-icons.cjs  generate-mdx.py  generate-test-doc.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: export.rs  file.rs  mdx.rs  mod.rs
src-tauri/src/image/: commands.rs  compress.rs  hash.rs  mod.rs  ssim.rs
src/__tests__/: editorStore.test.ts  galleryStore.test.ts  types.test.ts
src/components/common/: AboutModal.tsx  ContextMenu.tsx  Dialog.tsx  Dropdown.tsx
src/components/editor/: EditorArea.tsx  SearchReplace.tsx  SourceEditor.tsx  WysiwygEditor.tsx
src/extensions/: align.ts  colored-text.ts  columns.ts  emoji.ts  footnote.ts  frontmatter.ts  highlight.ts  index.ts  latex.ts  sup-sub.ts  toc.ts
src/hooks/: useAutoSave.ts  useFileOps.ts  useImageDrop.ts  useImageOps.ts
src/plugins/: headingMarker.ts  localImage.ts
src/store/: editorStore.ts  galleryStore.ts
src/styles/: context-menu.css  dialog.css  editor-theme.css  layout.css  settings.css  theme-index.css  variables.css
src/types/: index.ts
src/utils/: mdxProcessor.ts
test-assets/: generate-large-doc.js  large-test-doc.md
(+14 files in other folders)
